--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -258,14 +258,14 @@
                                             <a class="nav-link" href="grupos.html">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo grupo
+                                        Cadastrar novo grupo
 									</span> </a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" href="#tabs-grupos-tab-3" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
- Editar grupo
+                                        Editar grupo
 									</span> </a>
                                         </li>
                                     </ul>
@@ -287,7 +287,7 @@
                                         <div class="row mt-md divider-top">
                                             <div class="col-lg-9">
                                                 <fieldset class="form-group">
-                                                    <label class="form-label semibold" for="">Nome do grupo
+                                                    <label class="form-label semibold" for="">Nome
                                                         <span class="semibold text-danger h4">*</span></label>
                                                     <input id="nome-grupo" class="form-control" name="signin_v1[<strong>Nome do grupo</strong>]" type="text" data-validation="[NOTEMPTY]" value="Adolescente">
                                                 </fieldset>
