--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -257,7 +257,7 @@
                                             <a class="nav-link" href="#tabs-grupos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo grupo
+                                        Cadastrar novo grupo
 									</span> </a>
                                         </li>
 
@@ -509,7 +509,7 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <table class="display datatable-on table table-striped table-bordered" cellspacing="0" width="100%">
+                                <table class="datatable-on table table-hover">
                                     <thead>
                                         <tr>
                                             <th>Curso</th>
