--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -140,7 +140,8 @@
                         <li class="with-sub">
                             <span class="lbl">Grupos</span></a>
                             <ul>
-                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a></li>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a>
+                                </li>
                                 <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
                             </ul>
                         </li>
@@ -258,7 +259,7 @@
                                                 <a class="nav-link" href="niveis.html" role="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo nível
+                                        Cadastrar novo nível
 									</span> </a>
                                             </li>
                                             <li class="nav-item">
