--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -256,7 +256,7 @@
                                                 <a class="nav-link" href="#tabs-cursos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo nível
+                                        Cadastrar novo nível
 									</span> </a>
                                             </li>
                                         </ul>
