--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -257,7 +257,7 @@
                                             <a class="nav-link" href="posto.html">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo posto avançado
+                                        Cadastrar novo posto avançado
 									</span> </a>
                                         </li>
                                         <li class="nav-item">
