--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -253,7 +253,7 @@
                                             <a class="nav-link" href="#tabs-servicos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo posto avançado
+                                        Cadastrar novo posto avançado
 									</span> </a>
                                         </li>
                                     </ul>
