--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -257,7 +257,7 @@
                                             <a class="nav-link" href="unidade.html">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar nova unidade
+                                        Cadastrar nova unidade
 									</span> </a>
                                         </li>
                                         <li class="nav-item">
