--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -254,7 +254,7 @@
                                             <a class="nav-link" href="#tabs-servicos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar nova unidade
+                                        Cadastrar nova unidade
 									</span> </a>
                                         </li>
                                     </ul>
