--- a/pages/servicos/servicos--editar.html
+++ b/pages/servicos/servicos--editar.html
@@ -256,7 +256,7 @@
                                             <a class="nav-link" href="servicos.html">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo serviço
+                                        Cadastrar novo serviço
 									</span> </a>
                                         </li>
                                         <li class="nav-item">
@@ -342,7 +342,7 @@
                                     </div>
                                     <div class="row divider-top">
                                         <div class="col-sm-12">
-                                            <label class="form-label semibold" for="">Grupos(s)
+                                            <label class="form-label semibold" for="">Grupo(s)
                                                 <span class="semibold text-danger h4">*</span></label>
                                             <select class="select2" multiple="multiple">
                                                 <option selected>Acadêmico</option>
