--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -254,7 +254,7 @@
                                             <a class="nav-link" href="#tabs-servicos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo serviço
+                                        Cadastrar novo serviço
 									</span> </a>
                                         </li>
                                     </ul>
@@ -603,7 +603,7 @@
                                     </div>
                                     <div class="row divider-top">
                                         <div class="col-sm-12">
-                                            <label class="form-label semibold" for="">Grupos(s)
+                                            <label class="form-label semibold" for="">Grupo(s)
                                                 <span class="semibold text-danger h4">*</span></label>
                                             <select class="select2" multiple="multiple">
                                                 <option>Acadêmico</option>
