--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -257,14 +257,14 @@
                                             <a class="nav-link" href="cursos.html" role="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo curso
+                                        Cadastrar novo curso
 									</span> </a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" href="tabs-cursos-tab-3" role="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Editar curso
+                                        Editar curso
 									</span> </a>
                                         </li>
                                     </ul>
