--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -256,7 +256,7 @@
                                             <a class="nav-link" href="#tabs-cursos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar novo curso
+                                        Cadastrar curso
 									</span> </a>
                                         </li>
                                     </ul>
