Reajustes globais, e melhorias na area de telefones

--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -517,7 +517,7 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    <div class="checkbox-bird mb-0">
+                                                    <div class="checkbox-bird ml-lg mb-0">
                                                         <input type="checkbox" id="check-modal-01"/>
                                                         <label for="check-modal-01"></label>
                                                     </div>
@@ -528,7 +528,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird">
+                                                    <div class="checkbox-bird ml-lg">
                                                         <input type="checkbox" id="check-modal-02"/>
                                                         <label for="check-modal-02"></label>
                                                     </div>
@@ -539,7 +539,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird">
+                                                    <div class="checkbox-bird ml-lg">
                                                         <input type="checkbox" id="check-modal-03"/>
                                                         <label for="check-modal-03"></label>
                                                     </div>
