--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -968,8 +968,8 @@
                                                                             <img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A - (Combo Split) + Activity Pack Teens 1 – Cengage Learning
                                                                         </p></td>
                                                                         <td class="text-right">
-                                                                            <button type="button" class="tabledit-edit-button btn btn-sm btn-danger">
-                                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i> Remover
+                                                                            <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                             </button>
                                                                         </td>
                                                                     </tr>
@@ -978,8 +978,8 @@
                                                                             <img src="../../img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book – Helbling Languages
                                                                         </p></td>
                                                                         <td class="text-right">
-                                                                            <button type="button" class="tabledit-edit-button btn btn-sm btn-danger">
-                                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i> Remover
+                                                                            <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                             </button>
                                                                         </td>
                                                                     </tr>
@@ -1115,7 +1115,7 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    <div class="checkbox-bird mb-0">
+                                                    <div class="checkbox-bird ml-lg mb-0">
                                                         <input type="checkbox" id="check-modal-01"/>
                                                         <label for="check-modal-01"></label>
                                                     </div>
@@ -1126,7 +1126,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird">
+                                                    <div class="checkbox-bird ml-lg">
                                                         <input type="checkbox" id="check-modal-02"/>
                                                         <label for="check-modal-02"></label>
                                                     </div>
@@ -1137,7 +1137,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird">
+                                                    <div class="checkbox-bird ml-lg">
                                                         <input type="checkbox" id="check-modal-03"/>
                                                         <label for="check-modal-03"></label>
                                                     </div>
