--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -138,7 +138,8 @@
                         <li class="with-sub">
                             <span class="lbl">Grupos</span></a>
                             <ul>
-                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a></li>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a>
+                                </li>
                                 <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
                             </ul>
                         </li>
@@ -571,82 +572,83 @@
                                             </div>
                                         </div>
                                     </section>
-                                    <section class="card card-default mt-md">
-                                        <header class="card-header">
-                                            <h5 class="semibold">
-                                                <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Telefones </h5>
-                                        </header>
-                                        <div class="card-block">
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <div class="row mt-md">
-                                                        <div class="col-sm-7">
-                                                            <div class="row">
-                                                                <div class="col-sm-12 mb-md">
-                                                                    <label class="form-label semibold" for=""> Telefones</label>
-                                                                </div>
-                                                                <div class="col-sm-5">
-                                                                    <label class="form-label semibold" for="">Tipo</label>
-                                                                    <select class="select2 select2-arrow">
-                                                                        <option>Selecione</option>
-                                                                        <option>Principal</option>
-                                                                        <option>Comercial</option>
-                                                                        <option>Celular</option>
-                                                                        <option>Fax</option>
-                                                                        <option>Outros</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="col-sm-7">
-                                                                    <label class="form-label semibold" for="">Número</label>
-                                                                    <div class="input-group">
-                                                                        <input type="number" class="form-control" placeholder="Número">
-                        <span class="input-group-btn">
-                          <button class="btn btn-success-outline" type="button">
-                              <i class="fa fa-plus" aria-hidden="true"></i>
-                          </button>
-                        </span>
-                                                                    </div>
+
+                                    <div class="row mt-md">
+                                        <div class="col-sm-12">
+                                            <section class="box-typical">
+                                                <header class="box-typical-header header-bordered">
+                                                    <div class="tbl-row">
+                                                        <div class="tbl-cell tbl-cell-title">
+                                                            <h5 class="semibold">
+                                                                <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Telefones
+                                                            </h5>
+                                                        </div>
+                                                        <div class="tbl-cell tbl-cell-action-bordered">
+                                                            <form>
+                                                                <button type="button" class="action-btn" data-toggle="collapse" data-target="#add-telefone" aria-expanded="false" aria-controls="add-telefone">
+                                                                    <i class="fa fa-plus-circle mr-xs"></i>Adicionar
+                                                                </button>
+                                                            </form>
+                                                        </div>
+                                                    </div>
+                                                </header>
+                                                <div class="p-0">
+                                                    <div class="collapse" id="add-telefone">
+                                                        <div class="clearfix p-a mb-0 divider-bottom">
+                                                            <div class="col-sm-5">
+                                                                <label class="form-label semibold" for="">Tipo</label>
+                                                                <select class="select2 select2-arrow">
+                                                                    <option>Selecione</option>
+                                                                    <option>Principal</option>
+                                                                    <option>Comercial</option>
+                                                                    <option>Celular</option>
+                                                                    <option>Fax</option>
+                                                                    <option>Outros</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class="col-sm-7">
+                                                                <label class="form-label semibold" for="">Número</label>
+                                                                <div class="input-group">
+                                                                    <input type="number" class="form-control" placeholder="Número">
+                                                                        <span class="input-group-btn">
+                                                                          <button class="btn btn-secondary-outline" type="button">
+                                                                              <i class="fa fa-plus" aria-hidden="true"></i>
+                                                                          </button>
+                                                                        </span>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-sm-5">
-                                                            <label class="form-label semibold" for="">Telefones cadastrados</label>
-                                                            <table class="table">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Tipo</th>
-                                                                        <th>Número</th>
-                                                                        <th></th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td>Principal</td>
-                                                                        <td>(61) 0000-0000</td>
-                                                                        <td>
-                                                                            <button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm">
-                                                                                <i class="fa fa-times" aria-hidden="true"></i>
-                                                                            </button>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Comercial</td>
-                                                                        <td>(61) 0000-0000</td>
-                                                                        <td>
-                                                                            <button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm">
-                                                                                <i class="fa fa-times" aria-hidden="true"></i>
-                                                                            </button>
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
+                                                    </div>
+                                                    <div class="table-responsive">
+                                                        <table class="table table-hover table-box-typical text-center">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th class="text-center">Tipo</th>
+                                                                    <th class="text-center">Telefone</th>
+                                                                    <th class="text-center"></th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td>
+                                                                        <p>Principal</p></td>
+                                                                    <td>
+                                                                        (00) 0000-0000
+                                                                    </td>
+                                                                    <td class="text-center">
+                                                                        <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                            <i class="fa fa-times mr-xs" aria-hidden="true"></i>
+                                                                        </button>
+                                                                    </td>
+                                                                </tr>
+
+                                                            </tbody>
+                                                        </table>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </section>
                                         </div>
-                                    </section>
-
+                                    </div>
 
                                     <div class="row divider-top pb-md">
                                         <div class="col-sm-12">
@@ -778,30 +780,34 @@
                                         <div class="tbl-row">
                                             <div class="tbl-cell tbl-cell-title">
                                                 <h5 class="semibold">
-                                                    <i class="fa fa-phone" aria-hidden="true"></i> Telefones </h5>
+                                                    <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Telefones
+                                                </h5>
                                             </div>
                                         </div>
                                     </header>
-                                    <div class="card-block">
+                                    <div class="p-0">
                                         <div class="table-responsive">
-                                            <table class="table mt-md">
+                                            <table class="table table-hover table-box-typical text-center">
                                                 <thead>
                                                     <tr>
-                                                        <th>Tipo</th>
-                                                        <th>Número</th>
-
+                                                        <th class="text-center">Tipo</th>
+                                                        <th class="text-center">Telefone</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td>Principal</td>
-                                                        <td>(61) 3442-5757</td>
-
+                                                        <td>
+                                                            <p>Principal</p></td>
+                                                        <td>
+                                                            (00) 0000-0000
+                                                        </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Comercial</td>
-                                                        <td>(61) 3442-5757</td>
-
+                                                        <td>
+                                                            <p>Outros</p></td>
+                                                        <td>
+                                                            (00) 0000-0000
+                                                        </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
