--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -302,7 +302,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <label class="form-label semibold" for="">Quantidade de unidades avaliativas</label>
-                                                <input type="number" class="form-control" id="" value="3">
+                                                <input type="text" class="form-control" id="" value="3">
                                             </div>
                                         </div>
                                         <div class="row divider-top pb-md">
