--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -910,7 +910,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <label class="form-label semibold" for="">Quantidade de unidades avaliativas</label>
-                                                <input type="number" class="form-control" id="" placeholder="00">
+                                                <input type="text" class="form-control" id="" placeholder="00">
                                             </div>
                                         </div>
                                         <div class="row divider-top pb-md">
