--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -886,12 +886,12 @@
                                             <div class="col-sm-7">
                                                 <label class="form-label semibold" for="">Número</label>
                                                 <div class="input-group">
-                                                    <input type="number" class="form-control" placeholder="Número">
-                        <span class="input-group-btn">
-                          <button class="btn btn-success-outline" type="button">
-                              <i class="fa fa-plus" aria-hidden="true"></i>
-                          </button>
-                        </span>
+                                                    <input type="text" class="form-control" placeholder="Número">
+                                                    <span class="input-group-btn">
+                                                      <button class="btn btn-success-outline" type="button">
+                                                          <i class="fa fa-plus" aria-hidden="true"></i>
+                                                      </button>
+                                                    </span>
                                                 </div>
                                             </div>
                                         </div>
