--- a/pages/servicos/servicos--editar.html
+++ b/pages/servicos/servicos--editar.html
@@ -309,7 +309,7 @@
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="form-label semibold" for="">Carga horária</label>
-                                            <input type="number" class="form-control" id="" placeholder="Carga horária" value="30">
+                                            <input type="text" class="form-control" id="" placeholder="Carga horária" value="30">
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="form-label semibold" for="">Público-alvo</label>
