--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -609,7 +609,7 @@
                                                             <div class="col-sm-7">
                                                                 <label class="form-label semibold" for="">Número</label>
                                                                 <div class="input-group">
-                                                                    <input type="number" class="form-control" placeholder="Número">
+                                                                    <input type="text" class="form-control" placeholder="Número">
                                                                         <span class="input-group-btn">
                                                                           <button class="btn btn-secondary-outline" type="button">
                                                                               <i class="fa fa-plus" aria-hidden="true"></i>
