--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -570,7 +570,7 @@
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="form-label semibold" for="">Carga horária</label>
-                                            <input type="number" class="form-control" id="" placeholder="Carga horária">
+                                            <input type="text" class="form-control" id="" placeholder="Carga horária">
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="form-label semibold" for="">Público-alvo</label>
