Ajustes em grupos - validação e mascaras

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -1037,9 +1037,9 @@
                             <div class="col-sm-12">
                                 <label class="form-label semibold" for="">Observações</label>
                                 <textarea rows="4" id="curso-observacao" class="form-control" placeholder="Observações"></textarea>
-                                <p>Você tem
+                                <small>Você tem
                                     <span id="curso-observacao-counter" class="counter-value semibold"></span> characters restantes.
-                                </p>
+                                </small>
                             </div>
                         </div>
                     </div>
